--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
   </head>
   <body>
+    <h1>Hoje é quarta-feira</h1>
     <header>
       <img src="./assets/logo.svg" alt="Logo Dev Finance" />
     </header>
