--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     />
   </head>
   <body>
-    <h1>Hoje é quarta-feira</h1>
     <header>
       <img src="./assets/logo.svg" alt="Logo Dev Finance" />
     </header>
@@ -114,7 +113,7 @@
       </div>
     </div>
 
-    <footer><p>dev.finance$</p></footer>
+    <footer><p>Rocha.finance$</p></footer>
 
     <script src="./scripts.js"></script>
   </body>
